{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 27,
  "lineage": "fc4df8d5-b759-8c23-2798-23f6972fcd33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08706954fb98f6bda",
            "arn": "arn:aws:ec2:us-east-1:481665087604:elastic-ip/eipalloc-08706954fb98f6bda",
            "domain": "vpc",
            "id": "eipalloc-08706954fb98f6bda",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-54-16-88.compute-1.amazonaws.com",
            "public_ip": "52.54.16.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_instance_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005417df848d783b6",
            "arn": "arn:aws:ec2:us-east-1:481665087604:instance/i-01c906e52e9550fe8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c906e52e9550fe8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "AWSB-65-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054a0d68839b952ae",
            "private_dns": "ip-10-0-10-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f7e9365357a9386",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3fad2fdb0c6cb86",
            "tags": {
              "Env": "dev",
              "Inventory": "Dynamic",
              "ManagedBy": "Terraform",
              "Name": "Ansys_main-PrivateServer-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Inventory": "Dynamic",
              "ManagedBy": "Terraform",
              "Name": "Ansys_main-PrivateServer-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0590acf37f5724373"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public",
            "aws_subnet.private-subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005417df848d783b6",
            "arn": "arn:aws:ec2:us-east-1:481665087604:instance/i-0fdcf87ce360cf266",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdcf87ce360cf266",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "AWSB-65-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038dfebb760ecbf46",
            "private_dns": "ip-10-0-1-94.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-44-212-43-101.compute-1.amazonaws.com",
            "public_ip": "44.212.43.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-023b0376628257179",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e30775943337179",
            "tags": {
              "Env": "dev",
              "Inventory": "Dynamic",
              "ManagedBy": "Terraform",
              "Name": "Ansys_main-PublicServer-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Inventory": "Dynamic",
              "ManagedBy": "Terraform",
              "Name": "Ansys_main-PublicServer-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0590acf37f5724373"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005417df848d783b6",
            "arn": "arn:aws:ec2:us-east-1:481665087604:instance/i-053fc1a73268bba20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053fc1a73268bba20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "AWSB-65-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0218c56abe694cc1f",
            "private_dns": "ip-10-0-3-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.172",
            "public_dns": "ec2-3-86-2-59.compute-1.amazonaws.com",
            "public_ip": "3.86.2.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d58058cea4b7289",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01693a947b557d842",
            "tags": {
              "Env": "dev",
              "Inventory": "Dynamic",
              "ManagedBy": "Terraform",
              "Name": "Ansys_main-PublicServer-3",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Inventory": "Dynamic",
              "ManagedBy": "Terraform",
              "Name": "Ansys_main-PublicServer-3",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0590acf37f5724373"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:internet-gateway/igw-09e7ca479e547d91a",
            "id": "igw-09e7ca479e547d91a",
            "owner_id": "481665087604",
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-IGW",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-IGW",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08706954fb98f6bda",
            "association_id": "eipassoc-0ff8a5665a95a5bdf",
            "connectivity_type": "public",
            "id": "nat-080333db1e9109b74",
            "network_interface_id": "eni-033e7be7d3f55a2ab",
            "private_ip": "10.0.1.15",
            "public_ip": "52.54.16.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e30775943337179",
            "tags": {
              "Name": "Ansys_main-NATGW"
            },
            "tags_all": {
              "Name": "Ansys_main-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:route-table/rtb-04f406860fb40490f",
            "id": "rtb-04f406860fb40490f",
            "owner_id": "481665087604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-080333db1e9109b74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-Private-RT",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-Private-RT",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:route-table/rtb-0568258db82045518",
            "id": "rtb-0568258db82045518",
            "owner_id": "481665087604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e7ca479e547d91a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-MAIN-RT",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-MAIN-RT",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073bf1c16390013b1",
            "route_table_id": "rtb-04f406860fb40490f",
            "subnet_id": "subnet-0a3fad2fdb0c6cb86"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f019d283cdc2d373",
            "route_table_id": "rtb-04f406860fb40490f",
            "subnet_id": "subnet-0b5285ff11c876c32"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0902800d7a05e8adf",
            "route_table_id": "rtb-04f406860fb40490f",
            "subnet_id": "subnet-07564b85f755ec35f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cb68e2af8b3460c",
            "route_table_id": "rtb-0568258db82045518",
            "subnet_id": "subnet-07e30775943337179"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d9be8d0a8d369b",
            "route_table_id": "rtb-0568258db82045518",
            "subnet_id": "subnet-002bf31a9c2e03e03"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e538d5e1505d36a",
            "route_table_id": "rtb-0568258db82045518",
            "subnet_id": "subnet-01693a947b557d842"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:security-group/sg-051e033fac2eef080",
            "description": "Allow outbound traffic to NAT Gateway and internal communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051e033fac2eef080",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "481665087604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-SG"
            },
            "tags_all": {
              "Name": "Private-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:security-group/sg-0590acf37f5724373",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0590acf37f5724373",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "481665087604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-SG"
            },
            "tags_all": {
              "Name": "Public-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:subnet/subnet-0a3fad2fdb0c6cb86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3fad2fdb0c6cb86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665087604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-PrivateSubnet-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-PrivateSubnet-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:subnet/subnet-0b5285ff11c876c32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5285ff11c876c32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665087604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-PrivateSubnet-2",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-PrivateSubnet-2",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:subnet/subnet-07564b85f755ec35f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07564b85f755ec35f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665087604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-PrivateSubnet-3",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-PrivateSubnet-3",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:subnet/subnet-07e30775943337179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e30775943337179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665087604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-PublicSubnet-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-PublicSubnet-1",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:subnet/subnet-002bf31a9c2e03e03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002bf31a9c2e03e03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665087604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-PublicSubnet-2",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-PublicSubnet-2",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:subnet/subnet-01693a947b557d842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01693a947b557d842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665087604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "Ansys_main-PublicSubnet-3",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Ansys_main-PublicSubnet-3",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-0e0a86c3826e58b34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481665087604:vpc/vpc-0e0a86c3826e58b34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0baf139880470c1d7",
            "default_route_table_id": "rtb-0191343ce7e5632f8",
            "default_security_group_id": "sg-0b683bf3ab0de8394",
            "dhcp_options_id": "dopt-0e68a1f9121512c54",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0a86c3826e58b34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0191343ce7e5632f8",
            "owner_id": "481665087604",
            "tags": {
              "Name": "Ansys_main",
              "Owner": "Aravind K",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "Ansys_main",
              "Owner": "Aravind K",
              "ProjectID": "ansys_main-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}